<resources>
    <string name="app_name">DOG TRAINING</string>
    <string name="splasttext">*Dog Training At Home (Simple ways of Training).</string>
    <string name="software">APPENCE SOFTWARE SOLUTIONS</string>
    <string name="title_activity_forgot_password">Forgot Password ?</string>
    <string name="button_dontHaveAccount">Dont have account?</string>
    <string name="button_signUp">Sign Up</string>
    <string name="Create_account">Create an Account</string>
    <string name="create">Please type the verification code sent to Email</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">HOME</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="TRAININGCOURSE">TRAINING COURSE</string>
    <string name="DOGACCESSORIES">DOG ACCESSORIES</string>
    <string name="DOGMART">DOG MART</string>
    <string name="NEWSFEEDS"><![CDATA[NEWS & FEEDS]]></string>
    <string name="BREEDINFO">BREED INFO</string>
    <string name="ADOPTION">ADOPTION</string>
    <string name="YOUTUBE">YOUTUBE</string>
    <string name="POLICIES">POLICIES</string>
    <string name="SUPPORT">SUPPORT</string>
    <string name="LOGOU">LOGOUT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="basic"><![CDATA[BASIC OBEDIENCE& BEHAVIOUR]]></string>
    <string name="enteryourtext">Message...</string>
    <string name="prductdesc"><![CDATA[Color- White & Black & Tan]]></string>
    <string name="Filter">FILTER</string>
    <string name="sort">SORT</string>
    <string name="MYPROFILE">MY PROFILE</string>
    <string name="MYORDER">MY ORDER</string>
    <string name="editprofile">Edit Profile</string>
    <string name="Passwordtext">If you have forgotten your passwordenter your email address/ mobile no we will send you New password then you can Login.  </string>
    <string name="hint_Name">Name</string>
    <string name="hint_phoneNumber">Email id</string>
    <string name="facebook_app_id">2518969478410680</string>
    <string name="fb_login_protocol_scheme">fb2518969478410680</string>
    <string name="permission_read_storage_rationale">Storage read permission is needed to pick files.</string>
    <string name="label_select_video">Select Video</string>
    <string name="ok">Ok</string>
    <string name="permission_title_rationale">Permission needed</string>
    <string name="nearby">Products Near by You</string>
    <string name="newarrival">New Arrivals</string>
    <string name="related">Related Products</string>
    <string name="ratting">Rating and Reviews</string>
    <string name="Latestreview">Latest Ratting and Review</string>
    <string name="complte_orders">Complete Orders</string>
    <string name="Gotoneetosell">Got one to sell?</string>
    <string name="getitinfront">Start Selling</string>
    <string name="VendorLogin">Seller Login</string>
    <string name="BuyerLogin">Buyer Login</string>
    <string name="otp">Enter Otp</string>
    <string name="SeeAllCategory">See All Category</string>
    <string name="VendorRegisration">Seller Registration</string>
    <string name="delete_product">Do You Want to Delete This Product???</string>
    <string name="photos">Only product photos allowed</string>
    <string name="view_all_category">All Categories</string>
    <string name="category_management">Category Management</string>
    <string name="total_earning">Total Earning</string>
    <string name="total_order">Total Order</string>
    <string name="change_address">Change Address</string>
    <string name="leku_title_activity_location_picker">Location Picker</string>
    <string name="leku_load_location_error">Something went wrong. Please try again.</string>
    <string name="leku_no_search_results">There are no results for your search</string>
    <string name="leku_unknown_location">unknown location</string>
    <string name="leku_voice_search_promp">Search by voice…</string>
    <string name="chat">CHATQR</string>
    <string name="PACKAGE">PACKAGE</string>


</resources>